# graphtm-cbr

./: .gitignore  CITATION.cff  LICENSE  README.md  pyproject.toml  pytest.ini  requirements.txt
benchmarks/: cpu_vs_cuda.py  throughput_forward.py  throughput_train.py
docs/: ARCHITECTURE.md
experiments/: __init__.py  _cli.py  eval_recourse.py  full_pipeline.py  train_student.py  train_teacher.py
graphtm/: __init__.py
paper/: case_studies.md  paper.md  references.bib
research/: 01_graphtm_sota.md  02_hgtm_canonical_spec.md  03_cair_cuda_arch.md  04_vsa_message_passing.md  05_benchmark_choice.md  06_graph_counterfactuals.md  07_c_cuda_architecture.md  08_regulatory_target.md
results/: case_studies_1778918915.json  distill_ensemble_ames_1778913284.json  ensemble_ames_1778896477.json  eval_recourse_ames_1778881241.json  eval_recourse_ames_1778881497.json  eval_recourse_distilled_1778914339.json  eval_recourse_ensemble_1778898137.json  hgtm_ames_distilled_seed42.npy  hgtm_ames_distilled_seed43.npy  hgtm_ames_distilled_seed44.npy  hgtm_ames_distilled_seed45.npy  hgtm_ames_distilled_seed46.npy  hgtm_ames_final.npy  hgtm_ames_seed42.npy  hgtm_ames_seed43.npy  hgtm_ames_seed44.npy  hgtm_ames_seed45.npy  hgtm_ames_seed46.npy  kazius_coverage_distilled_seed43_1778913666.json  kazius_coverage_seed42_1778897763.json  overnight_status.md  train_full_ames_1778880895.json
scripts/: case_studies.py  distill_ensemble_ames.py  eval_recourse_ames.py  eval_recourse_ensemble.py  eval_recourse_ensemble_distilled.py  kazius_coverage.py  kazius_coverage_distilled.py  make_figures.py  run_ames_smoke.py  (+2 more)
(+40 files in other folders)
